codama-macros/tests/codama_attribute/type_nodes/boolean_type_node/unrecognized_type.fail.rs
use codama::codama;

#[codama(type = boolean(unrecognized))]
pub struct Test;

#[codama(type = boolean(size = unrecognized))]
pub struct Test;

fn main() {}
